CPG-DEV/src/objects/ResourceTeam__c.object
<CustomObject>
    <fields>
        <fullName>ActualCost__c</fullName>
        <formula>(ActualHours__c * CASE(TEXT(TeamName__c), &quot;GFR&quot;, 124, &quot;Sensory&quot;, 106, &quot;FIBI Applications&quot;, 106, &quot;PPD&quot;, 120, 150))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualHours__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstimatedCost__c</fullName>
        <formula>(EstimatedHours__c * CASE(TEXT(TeamName__c), &quot;GFR&quot;, 124, &quot;Sensory&quot;, 106,&quot;FIBI Applications&quot;, 106, &quot;PPD&quot;, 120, 150))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedHours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Resource Teams</relationshipLabel>
        <relationshipName>ResourceTeams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TeamName__c</fullName>
        <label>Team Name</label>
        <picklist>
            <picklistValues>
                <fullName>FIBI Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Services</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Resource Team</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Resource Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>